# padv

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PRD-enhancements.md  README.md  SECURITY.md  agents.md  docker-compose.mutillidae.yml  docker-compose.phpmyfaq.yml  docker-compose.yml  flow.md  padv-improvement-research.md  padv.docker.toml  padv.example.toml  padv.mutillidae.strict.toml  padv.phpmyfaq.strict.toml  padv.toml  prd.md  promptpack.md  pyproject.toml  sonar-project.properties
.github/workflows/: test.yml
docker/: scip-loader.patch  scip-symbolnamer.patch
docker/mutillidae/: www-morcilla.Dockerfile
docker/phpmyfaq/: apache-morcilla.Dockerfile
docs/: agentic_invariants.md
padv/: __init__.py  identity.py  models.py  path_scope.py  taxonomy.py
padv/agents/: __init__.py  cache.py  checkpoints.py  deepagents_harness.py  proposer.py  skeptic.py
padv/analytics/: __init__.py  failure_patterns.py
padv/cli/: main.py
padv/config/: schema.py
padv/discovery/: __init__.py  auth.py  budgeting.py  fusion.py  repo_index.py  scip.py  source.py  static_grounding.py  web.py
padv/dynamic/: __init__.py
padv/eval/: __init__.py  coverage.py  integration_assessment.py  metrics.py
padv/gates/: __init__.py  engine.py
padv/logging/: structured.py
padv/oracle/: __init__.py  morcilla.py
padv/orchestrator/: differential.py  evidence_linking.py  graphs.py  pipeline.py  runtime.py
scripts/: compact_store.py  mutillidae_e2e.sh  mutillidae_integration_assess.py  phpmyfaq_e2e.sh  phpmyfaq_integration_assess.py
tests/: test_agent_cache.py  test_agentic_discovery_integration.py  test_auth_discovery.py  test_cli.py  test_config.py  test_coverage_accounting.py  test_deepagents_harness.py  test_deterministic_control_plane.py  test_differential.py  test_discovery_fusion.py  test_evidence_linking.py  test_evidence_store_run_scope.py  test_failure_patterns.py  test_gates.py  test_graph_orchestrator.py  test_http_runner.py  test_http_session_isolation.py  test_integration_assessment.py  test_joern_adapter.py  test_mutillidae_integration_assess.py  test_mutillidae_stack_config.py  test_oracle.py  test_path_scope.py  test_phase1_runtime_gates.py  test_phase4_runtime_witness_gates.py  test_phase5_gate_regressions.py  test_phpmyfaq_stack_config.py  test_policy_and_regression_guards.py  test_proposer.py  test_repo_index.py  test_runtime_validation.py  test_scip_adapter.py  test_skeptic.py  test_source_discovery.py  test_static_grounding.py  test_store_compaction.py  test_taxonomy_coverage.py  test_typed_oracle_reports.py  test_validate_only_integration.py  test_web_discovery.py
(+15 files in other folders)
